--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM</title>
+  <meta charset="UTF-8">
+  <title>Dom Selection</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h3>Document object model</h3>
-    <div class="card">
-        <p>paragraf 1</p>
-        <p>paragraf 1</p>
-    </div>
-    <ul>
-        <li>item 1</li>
-        <li>item 2</li>
-        <li>item 3</li>
-        <li>item 4</li>
-    </ul>
+  <h1 id="judul">Hello World</h1>
+  <div id="container">
+      <section id="a">
+          <p class="p1">paragraf 1</p>
+          <a href="https://github.com/Nurmieai">Github Nurmieai</a>
+          <p class="p2">paragraf 2</p>
+          <p class="p3">paragraf 3</p>
+      </section>
+      <section id="b">
+          <p>paragraf 4</p>
+          <ul>
+              <li>item 1</li>
+              <li>item 2</li>
+              <li>item 3</li>
+          </ul>
+      </section>
+  </div>
+
+<script src="./js/script.js"></script>
 </body>
 </html>
